Fixed bug input search and Icons

--- a/Maquetado Individual/index.html
+++ b/Maquetado Individual/index.html
@@ -22,6 +22,7 @@
             </a>
         </div>
         <input id="search" class="busqueda" type="text" name="s" value="" placeholder="Escribe qué perfume te gustaría... o llámanos al 91 882 1188" aria-label="Buscar" autocomplete="off">
+        <span class="material-symbols-outlined">search</span>
 
         <div class="opciones">
             <svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="25" height="25" viewBox="0 0 50 50">
@@ -48,7 +49,10 @@
     <main>
         <section id="imagen-principal">
             <button class="rebajas">Ver rebajas</button>
-            <button class="ayuda">Ayuda</button>
+            <button class="ayuda">
+                <span class="material-symbols-outlined">help</span>
+                <p>ayuda</p>
+            </button>
         </section>
 
         <section class="abajo-imagen">
